objects/IFE_Document__c.object
<CustomObject>
    <fields>
        <fullName>All_Customers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Document should be displayed to all customers</description>
        <label>All Customers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category_Type__c</fullName>
        <label>Category Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Specific Document</fullName>
                </value>
                <value>
                    <fullName>Part Number Specific Document</fullName>
                </value>
                <value>
                    <fullName>Part Number Specific</fullName>
                    <isActive>false</isActive>
                    <label>Part Number Specific</label>
                </value>
                <value>
                    <fullName>System Specific Document</fullName>
                    <isActive>false</isActive>
                    <label>System Specific Document</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_List__c</fullName>
        <label>Customer List</label>
        <length>60000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Modified_Date__c</fullName>
        <inlineHelpText>Required to be set so that it can be picked up by weekly email batch</inlineHelpText>
        <label>Document Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_Number__c</fullName>
        <externalId>true</externalId>
        <label>Document Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Technical Publication</fullName>
                </value>
                <value>
                    <fullName>Repair</fullName>
                </value>
                <value>
                    <fullName>GCS</fullName>
                </value>
                <value>
                    <fullName>Spare Parrs</fullName>
                </value>
                <value>
                    <fullName>Products</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Emaiil_Alert__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Email to subscribed customers when a new version of this document is published.</description>
        <label>Emaiil Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Alert__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Email to subscribed customers when a new version of this document is published.</description>
        <label>Email Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <label>File Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Size__c</fullName>
        <label>File Size</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>File_Type__c</fullName>
        <label>File Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>pdf</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Folder_Number__c</fullName>
        <label>Folder Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Folder_Version__c</fullName>
        <label>Folder Version</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_Id__c</fullName>
        <externalId>true</externalId>
        <label>Item Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Description__c</fullName>
        <label>Part Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <label>Part Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revision__c</fullName>
        <label>Revision</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Pub_Document_Type__c</fullName>
        <label>Tech Pub Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Document_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aircraft Illustrated Parts Catalog</fullName>
                </value>
                <value>
                    <fullName>Aircraft Maintenance Manual</fullName>
                </value>
                <value>
                    <fullName>AIRCRAFT SCHEMATIC MANUAL</fullName>
                </value>
                <value>
                    <fullName>AIRCRAFT WIRING MANUAL</fullName>
                </value>
                <value>
                    <fullName>Component Maintenance Manual</fullName>
                </value>
                <value>
                    <fullName>COMPONENT MAINTENANCE PUBLICATION</fullName>
                </value>
                <value>
                    <fullName>Customer Information Letter</fullName>
                </value>
                <value>
                    <fullName>Fault Isolation Manual</fullName>
                </value>
                <value>
                    <fullName>Illustrated Parts Catalog</fullName>
                </value>
                <value>
                    <fullName>ILLUSTRATED PARTS DATA</fullName>
                </value>
                <value>
                    <fullName>INSTALLATION SERVICE BULLETIN</fullName>
                </value>
                <value>
                    <fullName>MAINTENANCE PRACTICE</fullName>
                </value>
                <value>
                    <fullName>Master BITE Fault List</fullName>
                </value>
                <value>
                    <fullName>ON-AIRCRAFT TEST PROCEDURE</fullName>
                </value>
                <value>
                    <fullName>Operations Maintenance Manual</fullName>
                </value>
                <value>
                    <fullName>Publications Indexes</fullName>
                </value>
                <value>
                    <fullName>Reference Document</fullName>
                </value>
                <value>
                    <fullName>REMOVAL SERVICE BULLETIN</fullName>
                </value>
                <value>
                    <fullName>REQUEST FORMS</fullName>
                </value>
                <value>
                    <fullName>Service Bulletin</fullName>
                </value>
                <value>
                    <fullName>Service Information Letter</fullName>
                </value>
                <value>
                    <fullName>STANDARD PRACTICE MANUAL</fullName>
                </value>
                <value>
                    <fullName>Standard Wiring Practices Manual</fullName>
                </value>
                <value>
                    <fullName>SYSTEM SCHEMATIC MANUAL</fullName>
                </value>
                <value>
                    <fullName>TASK CARDS</fullName>
                </value>
                <value>
                    <fullName>TEAC CMM</fullName>
                </value>
                <value>
                    <fullName>Technical Information Letter</fullName>
                </value>
                <value>
                    <fullName>Trouble Shooting Manual</fullName>
                </value>
                <value>
                    <fullName>Video Control Center Component Maintenance Manual</fullName>
                </value>
                <value>
                    <fullName>﻿WIRING DIAGRAM MANUAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Statement__c</fullName>
        <label>Work Statement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>myIfeOrderHeaders__c</fullName>
        <label>myIfeOrderHeaders</label>
        <length>50</length>
        <referenceTo>myIfeOrderHeaders__x</referenceTo>
        <relationshipLabel>IFE Documents</relationshipLabel>
        <relationshipName>IFE_Documents</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <label>IFE Document</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>File_Name__c</columns>
        <columns>Document_Number__c</columns>
        <columns>Description__c</columns>
        <columns>Category_Type__c</columns>
        <columns>Document_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Document_Type__c</columns>
        <columns>Folder_Number__c</columns>
        <columns>Folder_Version__c</columns>
        <columns>Document_Modified_Date__c</columns>
        <columns>Emaiil_Alert__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IFE Documents</pluralLabel>
    <recordTypes>
        <fullName>Agile_Document</fullName>
        <active>true</active>
        <description>Other Agile Documents</description>
        <label>Agile Document</label>
    </recordTypes>
    <recordTypes>
        <fullName>Misc_Documents</fullName>
        <active>true</active>
        <description>Salesforce hosted  dicuments</description>
        <label>Misc Documents</label>
    </recordTypes>
    <recordTypes>
        <fullName>Technical_Publication</fullName>
        <active>true</active>
        <description>Tech Pub docs</description>
        <label>Technical Publication</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Part_Number_Required_for_Part_Specific</fullName>
        <active>false</active>
        <description>Part Number is required for part specific document</description>
        <errorConditionFormula>ISPICKVAL(Category_Type__c, &quot;Part Number Specific Document&quot;) &amp;&amp; 
 ISBLANK(Part_Number__c)</errorConditionFormula>
        <errorMessage>Part Number is required for Part Specific document.</errorMessage>
    </validationRules>
</CustomObject>